--- a/front-end/src/components/leftbar/leftbar.css
+++ b/front-end/src/components/leftbar/leftbar.css
@@ -1,25 +1,20 @@
 .leftbar {
   display: flex;
-  top: 70px;
+  top: 73px;
+  left: 0;
+  bottom: 0;
   position: fixed;
+  overflow-y: hidden;
+  z-index: 2;
+  background-color: var(--first-color);
 }
 .leftbar-wrapper {
-  padding: 30px 20px;
+  padding: 30px 20px 0 20px;
   max-width: 400px;
   min-width: 320px;
   width: 25vw;
-  height: 80vh;
   overflow-y: scroll;
-}
-.overlay {
-  display: none;
-  width: 100vw;
-  background: rgba(0, 0, 0, 0.5);
-  filter: blur(5px);
-}
-.overlay.active {
-  display: block;
-  height: 100vh;
+
 }
 
 ::-webkit-scrollbar {
@@ -32,7 +27,7 @@
   margin-top: 5px;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: #808080;
+  background-color: var(--icon);
   border-radius: 2px;
   margin-top: 5px;
 }
