--- a/front-end/src/components/leftbar/leftbar.css
+++ b/front-end/src/components/leftbar/leftbar.css
@@ -11,7 +11,6 @@
 .leftbar-wrapper {
   padding: 30px 20px 0 20px;
   max-width: 400px;
-  min-width: 320px;
   width: 25vw;
   overflow-y: scroll;
 
@@ -87,15 +86,31 @@
 /* Media query */
 
 @media screen and (max-width: 768px) {
+
+  .leftbarList-item {
+    font-size: 16px;
+  
+  }
   .leftbar{
     top: 110px;
     left:-400px;
+    font-size: 16px;
   }
   .leftbar.active{
     left:0;
   }
 
+  .leftbar-wrapper {
+    width: 50vw;
+  }
+
 }
 
 @media screen and (max-width: 576px) {
+}
+
+@media screen and (max-width: 480px) {
+  .leftbar-wrapper {
+    width: 100vw;
+  }
 }
